syntax = "proto3";
package grpc;

option java_package = "com.summer.grpc.proto";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

/**
 * Service for handling vehicle Greeter.
 */
service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/api/hello"
            body: "*"
        };
    }

    rpc CurrentTime(google.protobuf.Empty) returns(HelloReply) {
        option (google.api.http) = {
            get: "/api/time"
        };
    }
}

/**
 * hello request
*/
message HelloRequest {
    string id = 1; // the id of this message.
    string name = 2; // the name of this message.
}

/**
 * hello reply
*/
message HelloReply {
    string message = 1;
}
